package pizzashop.ingredients;

public class Cheese implements Ingredient{
    @Override
    public double price() {
        return 1;
    }
}
