package pizzashop.ingredients;

public class Ham implements Ingredient{
    @Override
    public double price() {
        return 1;
    }
}
