package pizzashop.ingredients;

public interface Ingredient {

    double price();
}
