package pizzashop.ingredients;

public class RegularBase implements Base {


}
