package pizzashop.items;

public interface OrderItem {

    double calculatePrice();
}
